# shuu

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  skills-lock.json  tsconfig.json
.github/workflows/: main.yml
app/: .env.example  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/assets/: shuu.json
app/src/components/: AmbientCanvas.tsx  Chart.tsx  CipherText.tsx  Logo.tsx  MarketList.tsx  OrderBook.tsx  OrderForm.tsx  PositionCard.tsx  PositionsPanel.tsx  SealCeremony.tsx  StatsBar.tsx  WelcomeModal.tsx
app/src/context/: MarketContext.tsx
app/src/hooks/: useBalance.ts  useHistory.ts  useIsMobile.ts  useShuu.ts  useUsdcBalance.ts
app/src/lib/: crypto.ts
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
patches/: @arcium-hq+client+0.9.6.patch
programs/shuu/: Cargo.toml
programs/shuu/src/: lib.rs
scripts/: apply-sdk-patches.js  check-trader-state.js  check-wallet.js  debug-event-decode.js  debug-pnl.js  diagnose.ts  finalize-circuits.mjs  init-comp-defs.mjs  init-comp-defs.ts  init-protocol.ts  manual-settle.js  test-e2e.ts  upload-circuits.mjs  upload-circuits.ts  verify-onchain.js
tests/: shuu.ts
